Header and Footer update Updated header to include hamburger menu Updated footer to centre items on mobile view The above isn't working correctly so I have a 30 min screenshare session and need to push this code to GitHub so we can go through the code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@ header {
     margin: 0;
 }
 
-.complete-header {
-    background-color: #000;
+.header-background {
+    background-color: #000; 
 }
 
 .logo {
@@ -15,15 +15,26 @@ header {
     background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
+    margin: auto;
     min-height: 90px;
+}
+
+.col-8 {
+    background-color: #000;
 }
 
 .navbar {
     min-height: 90px;
+    margin-right: 30px;
 }
 
 .navbar-mainheader {
     margin: auto;
+    margin-right: 30px;
+}
+
+.navbar-toggler-icon {
+    border: 1px solid red;
 }
 
 .nav-link {
@@ -36,28 +47,11 @@ header {
     letter-spacing: 1px;
 }
 
-.dropdown-item {
-    color: #13A6DB;
-    background-color: #000;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family: "Titillium Web", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-    font-size: 22px;
-    letter-spacing: 1px;
-}
-
-ul.dropdown-menu {
-    border: 0;
-    padding: 0;
-}
-
-ul li {
-    line-height: 15px;
-}
-
 /*----------------------------------------------------Hover*/
+
+.logo:hover {
+    background: #F9F871;
+}
 
 a:hover {
     color: #F9F871;
@@ -68,11 +62,6 @@ a:hover {
     color: #F9F871;
 }
 
-.dropdown-item:hover {
-    color: #F9F871;
-    background-color: #000;
-}
-
 .social-links li a i:hover {
     color: #F9F871;
 }
@@ -81,11 +70,18 @@ a:hover {
 
 .footer-background {
     background-color: #000;
+    margin: none;
+    margin-right: -40px;
 }
 
 a {
     color: #13A6DB;
+    text-decoration: none;
 }
+
+/* .column-button-style {
+    position: relative;
+} */
 
 .button-style {    
     background-color: #000;
@@ -95,12 +91,15 @@ a {
     margin-left: 10px;
     margin-top: 20px;
     border-radius: 50%;
+    text-align: center;
+    text-decoration: none;
 }
 
 .copywright-style {
     color: #FFF;
     font-family: "Titillium Web", sans-serif;
     font-style: italic;
+    font-size: 13px;
     letter-spacing: 1px;
     line-height: 5px;
     margin-top: 20px;
